@@ -1,6 +1,7 @@
 package com.healthy.backend.service;
 
 
+
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -590,14 +591,12 @@ public class SurveyService {
                     .map(student -> {
                         return surveyResultRepository.findByStudentID(student).getLast();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
-                List<ConfirmationRequest> confirmationRequests = resultList.stream()
+                return resultList.stream()
                     .filter(result -> result.getResult() == 0 || result.getResult() > (0.95 * result.getMaxScore()))
                     .map(result -> new ConfirmationRequest(result.getStudentID(), false))
                     .collect(Collectors.toList());
-        
-                return confirmationRequests;
                 
         default:
                throw new RuntimeException("You don't have permission to access");
